package jobsrv;
import "protocols/net.proto";
import "protocols/originsrv.proto";

enum Os {
  Linux = 1;
  Darwin = 2;
  Windows = 3;
}

enum WorkerState {
  Ready = 0;
  Busy = 1;
}

enum JobState {
  Pending = 0;
  Processing = 1;
  Complete = 2;
  Rejected = 3;
  Failed = 4;
  Dispatched = 5;
}

message Heartbeat {
  optional string endpoint = 1;
  optional Os os = 2;
  optional WorkerState state = 3;
}

message Job {
  optional uint64 id = 1;
  optional uint64 owner_id = 2;
  optional JobState state = 3;
  optional originsrv.OriginProject project = 4;
  optional net.NetError error = 5;
}

message JobGet {
  optional uint64 id = 1;
}

message JobSpec {
  optional uint64 owner_id = 1;
  optional originsrv.OriginProject project = 2;
}
